# monograficodemo

./: .env.example  README.md  justfile
app/: settings.py  urls.py
applications/account/: views.py
applications/account/templates/: signin.html  signup.html
applications/core/templates/: home.html
source/django/core/: justfile  requirements.txt
source/django/core/app/: settings.py
source/django/core/applications/account/: views.py
source/django/core/applications/account/templates/: signup_ES.html
source/django/core/applications/core/: views.py
source/django/core/applications/core/static/core/styles/: employeemanager.css
source/django/core/applications/core/templates/core/: about.html  about_ES.html  home.html
source/django/core/applications/employeemanager/: README.md  urls.py  views.py
source/django/core/applications/employeemanager/migrations/: 0003_todo.py
source/django/core/main/: pyproject.toml  requirements.txt
source/django/core/server/: README.md  admin.py  apps.py  models.py  urls.py  views.py
source/django/core/server/handler/health/: HealthHandler.py  __init__.py
source/django/core/server/handler/hello/: HelloHandler.py  __init__.py
source/django/core/server/handler/signup/: SignUpHandler.py  __init__.py
source/django/core/server/migrations/: 0001_initial.py
source/django/core/static/employeemanager/: employeemanager.css
source/django/core/utils/adapters/httpAdapter/: __init__.py  httpAdapter.py
source/django/core/utils/validators/: EmailValidator.py  UsernameValidator.py
templates/pages/: signin.html  signup.html
(+4 files in other folders)
