[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv.project]
name = "main"
version = "0.1.0"
description = "Django project"
dependencies = [
    # Core project dependencies
    "asgiref==3.11.1",
    "django==6.0.3",
    "psycopg==3.3.3",
    "psycopg-binary==3.3.3",
    "python-dotenv==1.2.2",
    "sqlparse==0.5.5",
    "typing-extensions==4.15.0",
    "tzdata==2025.3",

    # Local packages (for development)
    # Uncomment and adjust the path if you want to install locally
    # "core-button @ file://../templates/core_button",

    # GitLab package (for cloud deployment)
    "core-button @ git+https://gitlab.com/uasd-monografico/core_button.git@main",
]